# lastro-hackathon

./: .env.example  .gitignore  ARQUITETURA_GRAFO.md  DOCUMENTACAO.md  README.md  app.py  pyproject.toml  requirements.txt  resumo_deep_research_imobiliario.tex
scripts/: diagrams.py  scrape_debug.py
src/: app.py
src/deep_research/: __init__.py  cli.py  config.py  graph.py  llm.py  mcp_server.py  models.py  search.py  segments.py  state.py  store.py
src/deep_research/nodes/: analyze.py  index.py  normalize.py  parse.py  rank.py  report.py  scrape.py
src/deep_research/scrapers/: __init__.py  base.py  mock.py  olx.py  quintoandar.py  vivareal.py  zapimoveis.py
